--- a/interface/package.json
+++ b/interface/package.json
@@ -10,11 +10,6 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "peerDependencies": {
-    "react": ">=16.13.0",
-    "react-dom": ">=16.13.0",
-    "styled-jsx": ">=3.3.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
@@ -27,14 +22,18 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.1.0",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "rollup": "^2.18.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^3.1.2",
-    "styled-jsx": "^3.3.0"
+    "styled-jsx": "^3.3.0",
+    "styled-jsx-plugin-postcss": "^2.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
