Build mobile authentication root screen

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,7 +13,7 @@
     "scheme": "myapp",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
