--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-table": "^7.2.1"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "^4.2.1",
