--- a/interface/package.json
+++ b/interface/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-table": "^7.2.1"
   }
 }
