--- a/marketing/package.json
+++ b/marketing/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^15.2.0",
     "next": "9.3.5",
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "urql": "^1.9.8"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "^4.2.1",
