--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^15.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "next-urql": "^1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-table": "^7.2.1"
+    "react-is": "^16.13.1",
+    "react-table": "^7.2.1",
+    "urql": "^1.9.8"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "^4.2.1",
