--- a/marketing/package.json
+++ b/marketing/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "graphql": "^15.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "next-urql": "^1.0.2",
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-is": "^16.13.1",
     "urql": "^1.9.8"
   },
   "devDependencies": {
