--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "graphql": "^15.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
