--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "cookie": "^0.4.1",
     "graphql": "^15.2.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.3.5",
     "next-urql": "^1.0.2",
     "react": "16.13.1",
