--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "urql": "^1.9.8",
-    "react-native-svg": "12.1.0"
+    "react-native-svg": "12.1.0",
+    "expo-secure-store": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
