--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.3.1",
+    "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.2.1",
     "@react-navigation/stack": "^5.2.16",
     "expo": "^38.0.0",
@@ -26,6 +27,7 @@
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "^0.3.1",
     "expo-web-browser": "~8.3.1",
     "graphql": "^15.3.0",
@@ -35,10 +37,10 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "urql": "^1.9.8",
-    "react-native-svg": "12.1.0",
-    "expo-secure-store": "~9.0.1"
+    "react-native-reanimated": "~1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
