--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,6 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.3.1",
-    "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.2.1",
     "@react-navigation/stack": "^5.2.16",
     "expo": "^38.0.0",
@@ -35,12 +34,13 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "urql": "^1.9.8",
-    "react-native-reanimated": "~1.9.0"
+    "urql": "^1.9.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
