--- a/backend/metadata/tables.yaml
+++ b/backend/metadata/tables.yaml
@@ -40,6 +40,7 @@
       - created_at
       - updated_at
       filter: {}
+      allow_aggregations: true
   - role: user
     permission:
       columns:
@@ -49,6 +50,7 @@
       - created_at
       - updated_at
       filter: {}
+      allow_aggregations: true
 - table:
     schema: public
     name: network_access_request
@@ -349,6 +351,7 @@
       - updated_at
       - user_uuid
       filter: {}
+      allow_aggregations: true
   update_permissions:
   - role: super_admin
     permission:
@@ -402,14 +405,6 @@
           name: user_profile
         column_mapping:
           uuid: user_uuid
-  - name: verification_code
-    using:
-      manual_configuration:
-        remote_table:
-          schema: public
-          name: verification_code
-        column_mapping:
-          email: email
   array_relationships:
   - name: network_membership_requests
     using:
@@ -630,7 +625,14 @@
 - table:
     schema: public
     name: verification_code
-  object_relationships:
-  - name: user
-    using:
-      foreign_key_constraint_on: email
+  event_triggers:
+  - name: insert-verification-code
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      num_retries: 3
+      interval_sec: 10
+      timeout_sec: 60
+    webhook_from_env: INSERT_VERIFICATION_CODE_WEBHOOK_URL
