--- a/mobile/.env
+++ b/mobile/.env
@@ -1,2 +1,6 @@
 HASURA_BASE_URL="http://localhost:8080/v1/graphql"
 REST_BASE_URL="http://localhost:3000/api"
+APPLICATION_NAME="Declaration (Development)"
+APPLICATION_SLUG="declaration-development"
+APPLICATION_SCHEME="declaration-development"
+APPLICATION_PACKAGE_ID="net.declaration.mobile.development"
