--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@sendgrid/mail": "^7.2.1",
     "@urql/core": "^1.12.2",
+    "color": "^3.1.2",
     "cookie": "^0.4.1",
     "graphql": "^15.2.0",
     "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "sharp": "^0.25.4"
   },
   "devDependencies": {
     "@vercel/node": "^1.7.1"
