--- a/backend/metadata/tables.yaml
+++ b/backend/metadata/tables.yaml
@@ -578,26 +578,32 @@
   - name: user
     using:
       foreign_key_constraint_on: user_uuid
+  - name: user_profile_private
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: user_profile_private
+        column_mapping:
+          uuid: user_profile_uuid
   insert_permissions:
   - role: super_admin
     permission:
       check: {}
       columns:
-      - date_of_birth
-      - id
+      - created_at
       - educational_institution
-      - gender
+      - id
       - location
       - personal_bio
       - photo
+      - updated_at
+      - user_uuid
       - username
+      - uuid
       - work_bio
       - work_place
       - work_title
-      - created_at
-      - updated_at
-      - user_uuid
-      - uuid
       backend_only: false
   - role: user
     permission:
@@ -606,9 +612,7 @@
           _eq: X-Hasura-User-Id
       columns:
       - created_at
-      - date_of_birth
       - educational_institution
-      - gender
       - location
       - personal_bio
       - photo
@@ -623,54 +627,45 @@
   - role: super_admin
     permission:
       columns:
-      - uuid
+      - created_at
+      - educational_institution
       - id
+      - location
+      - personal_bio
+      - photo
+      - updated_at
       - user_uuid
       - username
-      - date_of_birth
-      - location
-      - gender
-      - personal_bio
+      - uuid
       - work_bio
-      - work_title
       - work_place
-      - educational_institution
-      - photo
-      - created_at
-      - updated_at
+      - work_title
       filter: {}
   - role: user
     permission:
       columns:
-      - date_of_birth
-      - id
+      - created_at
       - educational_institution
-      - gender
+      - id
       - location
       - personal_bio
       - photo
+      - updated_at
+      - user_uuid
       - username
+      - uuid
       - work_bio
       - work_place
       - work_title
-      - created_at
-      - updated_at
-      - user_uuid
-      - uuid
       filter: {}
   update_permissions:
   - role: super_admin
     permission:
       columns:
-      - created_at
-      - date_of_birth
       - educational_institution
-      - gender
       - location
       - personal_bio
       - photo
-      - updated_at
-      - user_uuid
       - username
       - work_bio
       - work_place
@@ -680,15 +675,10 @@
   - role: user
     permission:
       columns:
-      - created_at
-      - date_of_birth
       - educational_institution
-      - gender
       - location
       - personal_bio
       - photo
-      - updated_at
-      - user_uuid
       - username
       - work_bio
       - work_place
@@ -697,10 +687,84 @@
         user_uuid:
           _eq: X-Hasura-User-Id
       check: null
-  delete_permissions:
+- table:
+    schema: public
+    name: user_profile_private
+  object_relationships:
+  - name: user_profile
+    using:
+      foreign_key_constraint_on: user_profile_uuid
+  insert_permissions:
   - role: super_admin
     permission:
+      check: {}
+      columns:
+      - date_of_birth
+      - id
+      - gender
+      - created_at
+      - updated_at
+      - user_profile_uuid
+      - uuid
+      backend_only: false
+  - role: user
+    permission:
+      check:
+        user_profile:
+          user:
+            uuid:
+              _eq: X-Hasura-User-Id
+      columns:
+      - date_of_birth
+      - gender
+      - user_profile_uuid
+      backend_only: false
+  select_permissions:
+  - role: super_admin
+    permission:
+      columns:
+      - date_of_birth
+      - id
+      - gender
+      - created_at
+      - updated_at
+      - user_profile_uuid
+      - uuid
       filter: {}
+  - role: user
+    permission:
+      columns:
+      - date_of_birth
+      - id
+      - gender
+      - created_at
+      - updated_at
+      - user_profile_uuid
+      - uuid
+      filter:
+        user_profile:
+          user:
+            uuid:
+              _eq: X-Hasura-User-Id
+  update_permissions:
+  - role: super_admin
+    permission:
+      columns:
+      - date_of_birth
+      - gender
+      filter: {}
+      check: null
+  - role: user
+    permission:
+      columns:
+      - date_of_birth
+      - gender
+      filter:
+        user_profile:
+          user:
+            uuid:
+              _eq: X-Hasura-User-Id
+      check: null
 - table:
     schema: public
     name: user_role
