--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,7 +40,9 @@
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "urql": "^1.9.8",
-    "@react-native-community/datetimepicker": "2.4.0"
+    "@react-native-community/datetimepicker": "2.4.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
