--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.3.1",
@@ -24,9 +25,13 @@
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "^0.3.1",
+    "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "graphql": "^15.3.0",
     "react": "16.11.0",
@@ -39,10 +44,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "urql": "^1.9.8",
-    "@react-native-community/datetimepicker": "2.4.0",
-    "expo-image-picker": "~8.3.0",
-    "expo-permissions": "~9.0.1"
+    "urql": "^1.9.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
